--- a/projeto/estilo.css
+++ b/projeto/estilo.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
     color: white;
-    background-image: url(./fundo.gif);
+    background-image: url(./img/fundo.gif);
     font: normal 18pt arial;
     margin: 0;
     padding: 0;
