--- a/trabalho/css/estilos.css
+++ b/trabalho/css/estilos.css
@@ -21,7 +21,7 @@ header > h1 {
     text-align: center;
 }
 img {
-    width: 270px;
+    width: 245px;
     margin-top: 20px;
     }
 section {
@@ -49,6 +49,14 @@ section > li {
     display: flex;
     align-items: center;
     box-shadow: 3px 2px 2px rgb(255, 102, 0), 6px 5px 6px rgb(51, 51, 51);
+}
+.estilo-camisa-preto{
+    width: 300px;
+    height: 360px;;
+}
+.estilo-camisa-florado{
+    width: 300px;
+    height: 340px;
 }
 ul li {
     display: inline-block;
